--- a/package.json
+++ b/package.json
@@ -21,8 +21,5 @@
   "bugs": {
     "url": "https://github.com/tacaly/fsz/issues"
   },
-  "homepage": "https://github.com/tacaly/fsz#readme",
-  "dependencies": {
-    "fs": "0.0.1-security"
-  }
+  "homepage": "https://github.com/tacaly/fsz#readme"
 }
