--- a/package.json
+++ b/package.json
@@ -22,4 +22,7 @@
     "url": "https://github.com/tacaly/fsfix/issues"
   },
   "homepage": "https://github.com/tacaly/fsfix#readme"
+},
+"publishConfig": {
+"registry": "https://npm.pkg.github.com/"
 }
